force-app/main/default/objects/KT_Document_Template_Config__mdt/KT_Document_Template_Config__mdt.object-meta.xml
<CustomObject>
    <description>Maps domain and persona combinations to required document templates for B4 checklist generation.</description>
    <label>KT Document Template Config</label>
    <pluralLabel>KT Document Template Configs</pluralLabel>
</CustomObject>