force-app/main/default/objects/KT_Document_Template_Config__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sort order for document checklist rendering.</description>
    <label>Display Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>