force-app/main/default/objects/KT_Document_Template_Config__mdt/fields/Document_Direction__c.field-meta.xml
<CustomField>
    <fullName>Document_Direction__c</fullName>
    <description>Controls whether the template configuration creates outbound documents, inbound upload requests, or both.</description>
    <label>Document Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>