force-app/main/default/objects/KT_Document_Template_Config__mdt/fields/Domain_Code__c.field-meta.xml
<CustomField>
    <fullName>Domain_Code__c</fullName>
    <description>Domain code matched against the onboarding record. Blank or ALL can be used for universal templates.</description>
    <label>Domain Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>