force-app/main/default/objects/KT_Document_Template_Config__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the generated document request is mandatory.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>