force-app/main/default/objects/KT_Document_Template_Config__mdt/fields/Persona_Code__c.field-meta.xml
<CustomField>
    <fullName>Persona_Code__c</fullName>
    <description>Persona code matched against the onboarding record. Blank or ALL can be used for universal templates.</description>
    <label>Persona Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>