force-app/main/default/objects/KT_Document_Template_Config__mdt/fields/Requires_OCR__c.field-meta.xml
<CustomField>
    <fullName>Requires_OCR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, uploads that match this domain/persona template configuration are routed into the OCR ingestion pipeline.</description>
    <label>Requires OCR</label>
    <type>Checkbox</type>
</CustomField>