force-app/main/default/objects/KT_Document_Template_Config__mdt/fields/SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>SLA_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Number of days from checklist creation to due date.</description>
    <label>SLA Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>