force-app/main/default/objects/KT_Document_Template_Config__mdt/fields/Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_API_Name__c</fullName>
    <description>API/developer name of the KT_DocumentTemplate__c template mapping for this configuration.</description>
    <label>Template API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>